src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Holder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan Holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Date__c</fullName>
        <label>Pay Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payed_Date__c</fullName>
        <label>Payed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bill_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bill_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Bill</label>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>